# chronicle

./: .gitignore  .mcp.json.example  AI_ASSISTANT_GUIDE.md  AI_SESSION_RECORDER_SPEC.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_HISTORY.md  LICENSE  MCP_SERVER.md  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
backend/: __init__.py  main.py
backend/cli/: __init__.py  commands.py  formatters.py
backend/core/: config.py
backend/database/: migrate.py  models.py
backend/mcp/: __init__.py  server.py
backend/services/: __init__.py  ai_tracker.py  git_monitor.py  session_manager.py  summarizer.py
backend/utils/: __init__.py  transcript_cleaner.py
chronicle-skills/: README.md
chronicle-skills/chronicle-context-retriever/: SKILL.md
chronicle-skills/chronicle-project-tracker/: SKILL.md
chronicle-skills/chronicle-session-documenter/: SKILL.md
chronicle-skills/chronicle-workflow/: SKILL.md
scripts/: chronicle-ai  chronicle-mcp
tests/: __init__.py  test_ai_tracker.py  test_git_monitor.py  test_project_tracking.py
